# yt-dlp-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
app/: config.py  i18n.py  main.py
app/api/: __init__.py  admin.py  download.py  health.py  info.py  proxy.py  search.py  stream.py
app/api/download/: __init__.py  cleanup.py  routes.py  service.py  state.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  auth.py  logging.py  security.py  state.py
app/i18n/: __init__.py
app/infra/: __init__.py  concurrency.py  database.py  rate_limit.py  redis.py
app/locales/: en.json  ja.json
app/models/: __init__.py  database.py  internal.py  request.py  response.py
app/services/: __init__.py  auth_service.py  format.py  info.py  proxy.py  search.py  stream.py  worker_pool.py  ytdlp.py  ytdlp_worker.py
app/static/: app.js  index.html  manifest.json  package.json  style.css  styles.css  sw.js
app/static/admin/: admin.js  index.html
app/static/locales/: en.json  ja.json
app/utils/: __init__.py  filename.py  hash.py  http_cache.py  http_retry.py  locale.py
nginx/: nginx.conf
tests/: test_main.py
web/clients/: index.html  player.html
